# mcp-server-splunk-oncall

./: .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_server_splunk_oncall/: client.py  server.py
tests/: test_server.py
