[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-splunk-oncall"
version = "0.1.0"
description = "MCP server for Splunk On-Call (VictorOps) incident management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "amendezsap" }]
keywords = ["mcp", "splunk", "victorops", "oncall", "incident-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-server-splunk-oncall = "mcp_server_splunk_oncall.server:main"

[project.urls]
Homepage = "https://github.com/amendezsap/mcp-server-splunk-oncall"
Repository = "https://github.com/amendezsap/mcp-server-splunk-oncall"
Issues = "https://github.com/amendezsap/mcp-server-splunk-oncall/issues"
