[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-splunk-oncall"
version = "0.3.0"
description = "MCP server for Splunk On-Call (VictorOps) incident management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "arnstarn" }]
keywords = ["mcp", "splunk", "victorops", "oncall", "incident-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
mcp-server-splunk-oncall = "mcp_server_splunk_oncall.server:main"

[project.urls]
Homepage = "https://github.com/arnstarn/mcp-server-splunk-oncall"
Repository = "https://github.com/arnstarn/mcp-server-splunk-oncall"
Issues = "https://github.com/arnstarn/mcp-server-splunk-oncall/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
